--- a/switch-db/parent/parent-common/pom.xml
+++ b/switch-db/parent/parent-common/pom.xml
@@ -81,6 +81,21 @@
       <version>${spring-boot-version}</version>
       <scope>compile</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+      <version>2.9.4</version>
+    </dependency>
+
   </dependencies>
 
 </project>
